--- a/Obligatorio/App.css
+++ b/Obligatorio/App.css
@@ -66,7 +66,7 @@ ul li a {
 }
 
 .doclist-title {
-    padding: 0px 16px;
+    padding: 16px 16px 8px 16px;
 }
 
 .ui-content.doclist.ui-listview.ui-listview-inset.ui-corner-all.ui-shadow {
@@ -175,10 +175,6 @@ h2 {
     margin-top: 20px;
 }
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
 img {
     border-radius: 5px 5px 0 0;
     width: 100%;
@@ -191,6 +187,7 @@ img {
 .card-name {
     margin: 10px 0px 5px 0px;
     color: rgb(105, 105, 105);
+    font-size: 1.10em;
 }
 
 .card-title {
@@ -215,18 +212,56 @@ img {
     padding-bottom: 10px;
 }
 
+.doclist-option {
+    height: 20px;
+}
+
 .doclist-option-text {
-    margin-left: 5px;
+    margin-top: 0px;
+    color: rgb(105, 105, 105);
 }
 
-.doclist-option.ui-link.ui-btn.ui-icon-star.ui-btn-icon-left.ui-shadow.ui-corner-all::after {
-    background-color: rgb(226, 226, 82);
+.doclist-option.ui-link.ui-btn.ui-icon-star.ui-shadow.ui-corner-all::after {
+    background-color: rgb(235, 235, 37);
+    height: 30px;
+    width: 30px;
+    border-radius: 2em;  
+    left: 47%;
 }
 
-.doclist-option.ui-link.ui-btn.ui-icon-heart.ui-btn-icon-left.ui-shadow.ui-corner-all::after {
+.doclist-option.ui-link.ui-btn.ui-icon-star.ui-shadow.ui-corner-all {
+    padding-top: 40px !important;
+    padding-bottom: 0px;
+}
+
+.doclist-option.ui-link.ui-btn.ui-icon-heart.ui-shadow.ui-corner-all::after {
     background-color: rgb(240, 74, 74);
+    height: 30px;
+    width: 30px;
+    border-radius: 2em;  
+    left: 47%;
 }
 
-.doclist-option.ui-link.ui-btn.ui-icon-calendar.ui-btn-icon-left.ui-shadow.ui-corner-all::after {
-    background-color: rgb(40, 202, 75);
+.doclist-option.ui-link.ui-btn.ui-icon-heart.ui-shadow.ui-corner-all {
+    padding-top: 40px !important;
+    padding-bottom: 0px;
+}
+
+.doclist-option.ui-link.ui-btn.ui-icon-calendar.ui-shadow.ui-corner-all::after {
+    background-color: rgb(14, 197, 54);    
+    height: 30px;
+    width: 30px;
+    border-radius: 2em; 
+    left: 47%;
+}
+
+.doclist-option.ui-link.ui-btn.ui-icon-calendar.ui-shadow.ui-corner-all {
+    padding-top: 40px !important;
+    padding-bottom: 0px;
+}
+
+.inlineIcon {
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
 }
