--- a/Obligatorio/App.css
+++ b/Obligatorio/App.css
@@ -89,7 +89,7 @@ ul li a {
 }
 
 .ui-btn.ui-btn-icon-right.ui-icon-carat-r::after {
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(216, 216, 216);
 }
 
 .ui-input-search:after {
@@ -163,11 +163,15 @@ h2 {
     margin-left: 10px;
 }
 
+fieldset.ui-field-contain {
+    padding: 5px 0px !important;
+}
+
 .card {
     border: .55px solid rgb(235, 235, 235);
     background-color: rgb(252, 252, 252);
     transition: 0.3s;
-    width: 80%;
+    width: 90%;
     border-radius: 5px;
     display: block;
     margin-left: auto;
@@ -178,6 +182,7 @@ h2 {
 img {
     border-radius: 5px 5px 0 0;
     width: 100%;
+    height: 100%;
 }
 
 .container {
