--- a/Obligatorio/App.css
+++ b/Obligatorio/App.css
@@ -87,7 +87,7 @@ ul li a img {
 .main-menu-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r {
     color: rgb(107, 107, 107);
     font-size: 0.97em;
-    padding: 30px 50px 30px 40px;  
+    padding: 20px 50px 20px 40px !important;  
     font-weight: 600;
 }
 
@@ -114,6 +114,10 @@ html body .ui-group-theme-b .ui-btn:visited, html head+body .ui-btn.ui-btn-b:vis
     background-color: rgb(255, 101, 83);
     border: none;
     text-shadow: none;
+}
+
+.ui-btn:active , .ui-btn::after{
+    background-color: rgb(247, 73, 54);
 }
 
 h2 {
@@ -277,4 +281,39 @@ img {
 
 .main-menu-item {
     padding-left: 0px;
+}
+
+.errorPopup {
+    width: 100%; 
+    box-shadow: 0 0 12px rgba(189, 189, 189, 0.6);
+    background-color: rgb(250, 250, 250);
+    bottom: 130px;
+}
+
+.ui-content.popup-text {
+    padding: 0px 16px; 
+}
+
+.ui-header.ui-bar-a {
+    height: 50px;
+    bottom: 20px;
+    line-height: 20px;
+    font-size: 1.30em;
+    background-color: rgb(240, 240, 240);
+}
+
+.ui-title {
+    margin: 5px 0px 20px 0px !important;
+    font-size: 1.10em;
+    font-weight: 400;
+    color: rgb(119, 119, 119);
+}
+
+.ui-subtitle {
+    font-size: 0.98em;
+    color: rgb(126, 126, 126);
+}
+
+.ui-ok-button {
+    margin-bottom: 15px;
 }
