--- a/Obligatorio/MedicORT/www/css/index.css
+++ b/Obligatorio/MedicORT/www/css/index.css
@@ -37,7 +37,7 @@ ul li a img {
     border-radius: 100% !important;
     margin: 10px 10px;
     max-width: 50px !important;
-    max-height: 50px !important;
+    height: 50px !important;
 }
 
 .ui-li-has-thumb a {
@@ -97,7 +97,7 @@ ul li a img {
 }
 
 .main-menu-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r {
-    color: rgb(107, 107, 107);
+    color: rgb(128, 128, 128);
     font-size: 0.97em;
     padding: 20px 50px 20px 40px !important;  
     font-weight: 600;
@@ -202,8 +202,8 @@ fieldset.ui-field-contain {
 }
 
 .card-img {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 363px;
 }
 
 .container {
@@ -218,15 +218,15 @@ fieldset.ui-field-contain {
 
 .card-title {
     margin: 0px;
-    font-size: 0.95em;
+    font-size: 0.90em;
     color: rgb(104, 104, 104);
     font-weight: 100;
 }
 
 .card-prof {
     margin: 5px 0px 0px 0px;
-    color: rgb(104, 104, 104);
-    font-weight: 100;
+    color: rgb(138, 138, 138);
+    font-weight: 600;
 }
 
 .card-clin {
@@ -326,6 +326,10 @@ fieldset.ui-field-contain {
     background-color: rgb(240, 240, 240);
 }
 
+.ui-header {
+    background-color: rgb(240, 240, 240) !important;
+}
+
 .ui-title {
     margin: 5px 0px 20px 0px !important;
     font-size: 1.10em;
@@ -352,4 +356,12 @@ fieldset.ui-field-contain {
 
 .ui-input-text.ui-body-inherit.ui-corner-all.ui-shadow-inset.ui-input-has-clear {
     padding-right: 0px;
+}
+
+.ui-title-page {
+    margin-bottom: 0px !important;
+    font-size: 1.10em !important;
+    letter-spacing: 0.03em;
+    color: rgb(112, 112, 112);
+    line-height: 15px;
 }
