--- a/Obligatorio/MedicORT/www/css/index.css
+++ b/Obligatorio/MedicORT/www/css/index.css
@@ -383,3 +383,7 @@ fieldset.ui-field-contain {
     border-color: rgb(240, 239, 239);
     font-weight: 100;
 }
+
+#map {
+    height: 400px !important;
+}
