--- a/Obligatorio/MedicORT/www/css/index.css
+++ b/Obligatorio/MedicORT/www/css/index.css
@@ -36,8 +36,8 @@ h2.tituloCentroMedico {
 ul li a img {
     border-radius: 100% !important;
     margin: 10px 10px;
-    max-width: 50px !important;
-    height: 50px !important;
+    max-width: 60px !important;
+    height: 60px !important;
 }
 
 .ui-li-has-thumb a {
@@ -47,13 +47,30 @@ ul li a img {
 .doclist-name, .medlist-name, .conlist-number, .favlist-name {
     color: rgb(107, 107, 107);
     font-weight: 100;
-    font-size: 0.85em !important;
+    font-size: 1.00em !important;
     text-overflow: ellipsis;
 }
 
-.doclist-specialty, .medlist-adress, .favlist-specialty .favlist-centro {
+.doclist-name, .doclist-specialty {
+    margin-left: 15px !important;
+}
+
+.conlist-med, .conlist-dr {
+    font-size: 0.85em !important;
+} 
+
+.doclist-specialty, .medlist-adress, .favlist-specialty, .favlist-centro {
     color: rgb(107, 107, 107);
-    font-size: 0.80em !important;
+    font-size: 1.00em !important;
+}
+
+.favlist-specialty,.favlist-name {
+    margin-bottom: 5px !important;
+    margin-top: 0px !important;
+}
+
+.favlist-centro {
+    margin: 0px !important;
 }
 
 .doclist-item, .medlist-item, .conlist-item {
@@ -82,7 +99,7 @@ ul li a img {
 }
 
 .doclist-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r, .medlist-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r {
-    padding: 11.2px 50px 0px 80px;
+    padding: 11.2px 50px 10px 80px;
 }
 
 .favlist-item.ui-btn {
@@ -90,7 +107,7 @@ ul li a img {
 }
 
 .medlist-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r {
-    padding: 11.2px 70px 0px 30px; 
+    padding: 11.2px 70px 20px 30px; 
 }
 
 .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited {
@@ -115,13 +132,13 @@ a.favlist-item.ui-btn {
     background-color: rgb(253, 253, 253);
     border-color: rgb(230, 229, 229);
     box-shadow: none;
-    padding-bottom: 25px;
+    padding-bottom: 35px;
 }
 
 .main-menu-item.ui-btn.ui-btn-icon-right.ui-icon-carat-r {
     color: rgb(128, 128, 128);
-    font-size: 0.97em;
-    padding: 20px 50px 20px 40px !important;  
+    font-size: 1.10em;
+    padding: 25px 50px 25px 40px !important;  
     font-weight: 600;
 }
 
@@ -139,8 +156,16 @@ a.favlist-item.ui-btn {
     padding-left: 2.5em;
 }
 
-.ui-btn.ui-btn-b.ui-corner-all {
+.ui-btn.ui-btn-b.ui-corner-all { 
     margin-top: 20px;
+}
+
+.ui-btn.ui-btn-b:active {
+    background-color: rgb(250, 81, 62) !important;
+}
+
+a:active, a:focus, a:visited, p:active, h1:active, h2:active {
+    text-shadow: none !important;
 }
 
 .ui-btn, html .ui-bar-b .ui-btn, html .ui-body-b .ui-btn, html body .ui-group-theme-b .ui-btn, html head+body 
@@ -151,7 +176,11 @@ html body .ui-group-theme-b .ui-btn:visited, html head+body .ui-btn.ui-btn-b:vis
     text-shadow: none;
 }
 
-.ui-btn:active , .ui-btn::after{
+.ui-btn.ui-btn-b {
+    background-color: rgb(255, 101, 83) !important;  
+}
+
+.ui-btn:active , .ui-btn::after {
     background-color: rgb(247, 73, 54);
 }
 
@@ -230,27 +259,28 @@ fieldset.ui-field-contain {
 .card-name {
     margin: 5px 0px;
     color: rgb(112, 112, 112);
-    font-size: 1.05em;
+    font-size: 1.15em;
 }
 
 .card-title {
     margin: 0px;
-    font-size: 0.90em;
+    font-size: 1.00em;
     color: rgb(156, 156, 156);
 }
 
 .card-prof {
     margin: 5px 0px 0px 0px;
-    color: rgb(138, 138, 138);
-    font-weight: 200;
+    color: rgb(187, 187, 187);
+    font-size: 1.00em;
 }
 
 .card-punt {
     margin: 0px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 10px;
     text-align: right;
     color: rgb(90, 90, 90);
+    font-size: 1.50em;
 }
 
 .doclist-option {
@@ -259,6 +289,7 @@ fieldset.ui-field-contain {
 
 .doclist-option-text {
     margin-top: 0px;
+    font-size: 1.20em;
     color: rgb(105, 105, 105);
 }
 
@@ -332,16 +363,12 @@ fieldset.ui-field-contain {
 
 .ui-header {
     background-color: rgb(255, 111, 95) !important;
-    border-bottom: 0px;
+    border: 0px;
     padding: 5px 0px;
 }
 
 .card {
     border: none;
-}
-
-h1 {
-    text-shadow: none;
 }
 
 .ui-title {
@@ -353,7 +380,7 @@ h1 {
 }
 
 p,h1,h2,h3,h4,h5,h6,a {
-    text-shadow: none;
+    text-shadow: none !important;
 }
 
 h1.ui-title {
@@ -369,7 +396,7 @@ h1.ui-title {
     padding-top: 5px;
 }
 
-.ui-ok-button {
+.ui-ok-button, .ui-ok-button {
     margin: 15px 0px !important;
 }
 
@@ -383,7 +410,7 @@ h1.ui-title {
 
 .ui-title-page {
     margin-bottom: 0px !important;
-    font-size: 1.10em !important;
+    font-size: 1.20em !important;
     letter-spacing: 0.03em;
     color: rgb(255, 255, 255);
     line-height: 15px;
@@ -393,6 +420,7 @@ h1.ui-title {
     background-color: rgba(241, 241, 241, 0.897) !important;
     border: none;
     font-weight: 100;
+    font-size: 1.00em;
     color: rgb(119, 119, 119);
     text-shadow: none;
 }
